--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,17 @@ edition = "2021"
 tighter-delays = []
 
 [dependencies]
-log = "0.4.21"
+
 embedded-hal = "1.0.0"
 embedded-hal-async = "1.0.0"
+
+log = "0.4.21"
+
 cassette = "0.2.5"
+snafu = { version = "0.8.1", default-features = false, features = [
+    "rust_1_65",
+] }
+strum = { version = "0.26.1", default-features = false, features = ["derive"] }
 
 [dev-dependencies]
 
