--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ strum = { version = "0.26.1", default-features = false, features = ["derive"] }
 
 rtic = { version = "2.1.0", features = ["thumbv7-backend"] }
 
+cortex-m = "0.7.7"
 teensy4-bsp = { version = "0.4.7", features = ["rt"] }
 teensy4-panic = { version = "0.2.3", default-features = false }
 teensy4-selfrebootor = "0.2.0"
@@ -47,3 +48,23 @@ rtic-monotonics = { version = "2.0.0", features = ["imxrt_gpt1"] }
 [patch.crates-io]
 imxrt-hal = { git = "https://github.com/Finomnis/imxrt-hal", branch = "eh1-uart" }
 rtic-monotonics = { git = "https://github.com/Finomnis/rtic", branch = "monotonic_rewrite" }
+
+
+# cargo build/run
+[profile.dev]
+codegen-units = 1
+debug = 2
+debug-assertions = true # <-
+incremental = false
+opt-level = 'z'         # <-
+overflow-checks = true  # <-
+
+# cargo build/run --release
+[profile.release]
+codegen-units = 1
+debug = 2
+debug-assertions = false # <-
+incremental = false
+lto = 'fat'
+opt-level = 3            # <-
+overflow-checks = false  # <-
